# roominfo_checker

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: actions.yml  jekyll-gh-pages.yml  update-data.yml
checker_script/: Room.py  main.py  requirements.txt
docs/: .gitignore  Gemfile  _config.yml  index.html
docs/_layouts/: default.html
docs/_site/: index.html
docs/_site/assets/css/: main.css  main.css.map
docs/_site/assets/js/: main.js
docs/_site/data/: data.json
docs/assets/css/: main.sass
docs/assets/js/: main.js
docs/data/: data.json
docs/js/: main.js
docs/js/DataTables/: datatables.css  datatables.js  datatables.min.js
roomfinder_site/: .gitignore  index.html  style.css  style.sass
roomfinder_site/_sass/: base.sass
roomfinder_site/js/: main.js
roomfinder_site/js/DataTables/: datatables.min.css
